activation order crashes address database (fdo#41022)